                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-09-2005 CRITCAL FIX: After libid3tag was added, music files opened over smb could be destroyed if write access was enabled on the share. It is sometimes enough to enter directory....
 - 10-09-2005 changed: added display of default player when selectring player. moved Play Using... up in context menu
 - 10-09-2005 added: ability to select player for music and video from context menu
 - 09-09-2005 fixed: when playing an audio file with the dvdplayer, switching between visualisation and menu resulted in a crash
 - 09-09-2005 added: libfaad to dvdplayer
 - 09-09-2005 fixed: replay gain info from an id3v2 tag was never read
 - 09-09-2005 changed: replaced id3lib with libid3tag (much smaller and better performance), needs libid3tag.dll in q:\system
 - 09-09-2005 fixed: replay gain info created with MP3gain was never read
 - 08-09-2005 added: NSF (Nintendo Sound File) codec to paplayer. Based on nosefart.
 - 08-09-2005 updated: Dutch language file (Thnx to nightspirit)
 - 08-09-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 08-09-2005 updated: Spanish language file (Thnx to jose_t)
 - 08-09-2005 updated: Finnish language file (Thnx to jutski)
 - 08-09-2005 updated: Korean language file (Thnx to AkoXko)
 - 08-09-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 08-09-2005 updated: Norwegian language file (Thnx to vnm)
 - 08-09-2005 updated: German language file
 - 07-09-2005 changed: made section unloading delayed same as dll unloading. (speeds up filelisting over daap://)
 - 07-09-2005 added: MP2 audio for Paplayer