@@ -322,7 +322,7 @@
 	<width>14</width>
 	<height>13</height>
 	<label>2</label>
-	<hyperlink>501</hyperlink>
+	<hyperlink>5</hyperlink>
 	<font>special13</font>
 	<onleft>98</onleft>
 	<onright>97</onright>
